--- a/Jyz.Api/appsettings.json
+++ b/Jyz.Api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Connection": {
+    "DbConnectionString": "Data Source=.;Initial Catalog=System;User ID=sa;Password=19911004"
+  },
+  "AllowedHosts": "*",
+  "Secret": "GQDstcKsx0NHjPOuXOYg5MbeJ1XT0uFiwDVvVBrk"
 }
