--- a/Jyz.Api/Jyz.Api.csproj
+++ b/Jyz.Api/Jyz.Api.csproj
@@ -9,19 +9,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jyz.Domain\Jyz.Domain.csproj" />
-    <ProjectReference Include="..\Jyz.IService\Jyz.IService.csproj" />
-    <ProjectReference Include="..\Jyz.Utility\Jyz.Utility.csproj" />
+    <ProjectReference Include="..\Jyz.Application\Jyz.Application.csproj" />
+    <ProjectReference Include="..\Jyz.Infrastructure\Jyz.Infrastructure.csproj" />
   </ItemGroup>
 
 
