--- a/Jyz.Infrastructure/Jyz.Infrastructure.csproj
+++ b/Jyz.Infrastructure/Jyz.Infrastructure.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Jyz.Domain\Jyz.Domain.csproj" />
   </ItemGroup>
 
 </Project>
