--- a/Jyz.Api/appsettings.json
+++ b/Jyz.Api/appsettings.json
@@ -6,9 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Project": {
+    "Name": "Jyz",
+    "Admin": "844C3BA5-3065-4D77-AE60-DEAD1B5BEFD6"
+  },
   "Connection": {
     "DbConnectionString": "Data Source=.;Initial Catalog=System;User ID=sa;Password=19911004"
   },
   "AllowedHosts": "*",
-  "Secret": "GQDstcKsx0NHjPOuXOYg5MbeJ1XT0uFiwDVvVBrk"
+  "Jwt": {
+    "Secret": "GQDstcKsx0NHjPOuXOYg5MbeJ1XT0uFiwDVvVBrk", //√‹‘ø
+    "Issuer": "Jamen",
+    "Audience": "Jamen",
+    "ExpireMinutes": "20"
+  }
 }
