--- a/Jyz.Api/appsettings.json
+++ b/Jyz.Api/appsettings.json
@@ -19,5 +19,8 @@
     "Issuer": "Jamen",
     "Audience": "Jamen",
     "ExpireMinutes": "20"
+  },
+  "Cors": {
+    "Origins": "http://localhost:8080,http://localhost:8081"
   }
 }
