--- a/Jyz.Application/Jyz.Application.csproj
+++ b/Jyz.Application/Jyz.Application.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Jyz.Infrastructure\Jyz.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Request\" />
+  </ItemGroup>
+
 </Project>
