--- a/Jyz.Api/appsettings.json
+++ b/Jyz.Api/appsettings.json
@@ -6,12 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Project": {
+  "SystemConfig": {
     "Name": "Jyz",
-    "Admin": "844C3BA5-3065-4D77-AE60-DEAD1B5BEFD6"
-  },
-  "Connection": {
-    "DbConnectionString": "Data Source=.;Initial Catalog=System;User ID=sa;Password=19911004"
+    "Admin": "844C3BA5-3065-4D77-AE60-DEAD1B5BEFD6",
+    "DbConnectionString": "Data Source=.;Initial Catalog=System;User ID=sa;Password=19911004",
+    "RedisConnectionString": "127.0.0.1:6379,Password=19911004,SyncTimeout=15000", //redis连接字符串(最好加密)
+    "CacheType": 1
   },
   "AllowedHosts": "*",
   "Jwt": {
