--- a/Jyz.Application/Jyz.Application.csproj
+++ b/Jyz.Application/Jyz.Application.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Service\File\Dtos\" />
     <Folder Include="Utilities\" />
   </ItemGroup>
 
