--- a/Jyz.Infrastructure.Data/Jyz.Infrastructure.Data.csproj
+++ b/Jyz.Infrastructure.Data/Jyz.Infrastructure.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200820065706_update2.cs" />
+    <Compile Remove="Migrations\20200820065706_update2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
